--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
 authors = ["Scott Godwin <sgodwincs@gmail.com>"]
-name = "uri"
+categories = ["parsing"]
+description = "A URI parser"
+homepage = "https://github.com/sgodwincs/uriparse-rs"
+license = "MIT"
+name = "uriparse"
+readme = "README.md"
+repository = "https://github.com/sgodwincs/uriparse-rs"
 version = "0.1.0"
 
 [dependencies]
