--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,14 @@ version = "0.6.2"
 harness = false
 name = "parse"
 
+[features]
+default = []
+
 [dependencies]
 fnv = "1.0.6"
 lazy_static = "1.3.0"
+serde = { version = "1.0.115", features = ["derive"], optional = true }
 
 [dev-dependencies]
 criterion = "0.2.10"
+serde_json = "1.0.57"
