feature: Segment is ported to use smol_str::SmolStr for owned variant instead of String

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ default = []
 fnv = "1.0.7"
 lazy_static = "1.4.0"
 serde = { version = "1.0.115", features = ["derive"], optional = true }
+smol_str = "0.1.22"
 
 [dev-dependencies]
 criterion = "0.2.10"
